--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+html, body {
+    margin: 0; 
+    width: 100vw;
+    height: 100vh;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background: linear-gradient(220deg, #ffffff, #e7e7e7);
+}
+
+
+//CSS DE PADRONIZAÇÃO DAS TELAS DE LOGIN E REGISTRO
+
+.login-register-container{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(220deg, #45eae9, #a1a1a1);
+
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
