--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -3,9 +3,33 @@
         <img src="../../../assets/logo_login_screen - Copia.png"/>
     </div>
     <br/>
-    <div class="form-lo">
+    <div class="form-login">
+        <mat-form-field>
+            <mat-label>Login</mat-label>
+            <input
+                type="text"
+                matInput
+                required
+            />
+        </mat-form-field>
 
+        <mat-form-field>
+            <mat-label>Senha</mat-label>
+            <input
+                type="password"
+                matInput
+                required
+            />
+        </mat-form-field>
+        
+        <button 
+            type="submit"
+            mat-button 
+            color="primary">
+                Entrar
+        </button>
     </div>
+
 
 
     <div>
