--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,17 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
+
+    font-family: "Outfit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 html, body {
     margin: 0; 
     width: 100vw;
     height: 100vh;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
     background: linear-gradient(220deg, #ffffff, #e7e7e7);
 }
 
@@ -20,7 +24,10 @@ html, body {
     height: 100%;
     background: linear-gradient(220deg, #45eae9, #a1a1a1);
 
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;      // centraliza horizontalmente
+    justify-content: center;  // centraliza verticalmente
+    width: 100%;
+    min-height: 100vh;        // ocupa a tela inteira
 }
