--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -41,7 +41,7 @@
   <div class="sign-up">
     <span>Não possui conta ainda?</span>
     <br/>
-    <button class="sign-up button">
+    <button class="signup-button">
       <a routerLink="/sign-up"><b>Cadastre-se</b></a>
     </button>
   </div>
