--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,13 @@ html, body {
     align-items: center;      /* centraliza horizontalmente */
     justify-content: center;  /* centraliza verticalmente */
 }
+
+.signup-button{
+    border: 1px solid black;
+    border-radius: 12px;
+    background: black;
+    color: white;
+    width: 60%;
+    padding: 10px;
+    cursor: pointer;    
+}
