--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,9 +33,9 @@ html, body {
 .signup-button{
     border: 1px solid black;
     border-radius: 12px;
-    background: black;
+    background: rgb(0, 0, 0);
     color: white;
     width: 60%;
     padding: 10px;
-    cursor: pointer;    
+    cursor: pointer;
 }
