--- a/src/app/components/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/sign-up-page/sign-up-page.component.html
@@ -4,7 +4,7 @@
         <strong><b>Cadastro</b></strong>
     </div>
     <div class="form-container">
-        <form class="sign-up-form" [formGroup]="signUpForm">
+        <form class="sign-up-form" [formGroup]="signUpForm" (submit)="signUpUser()">
             <div class="input-area">
                 <span>Nome:</span>
                 <mat-form-field appearance="fill" class="form-field-small">
@@ -120,11 +120,22 @@
             </div>            
             
             <div class="accept-terms">
-                <span>Eu li e concordo com os Termos de Uso.</span>
+                <mat-checkbox 
+                    #myCheckbox 
+                    name="accept-box"
+                    formControlName="termAccepted"
+                >
+                    <span>Eu li e concordo com os Termos de Uso.</span>
+                </mat-checkbox>                
             </div>
 
             <div class="submit-area">
-                <button type="submit" class="signup-button">
+                <button
+                    type="submit" 
+                    mat-raised-button
+                    class="signup-button" 
+                    [disabled]="signUpForm.invalid"
+                >
                     Cadastrar
                 </button>
             </div>
