--- a/src/app/components/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/sign-up-page/sign-up-page.component.html
@@ -140,6 +140,14 @@
                 </button>
             </div>
 
+            <div class="error-message">
+                <span>{{erro}}</span>
+            </div>
+
+            <div class="successful-message">
+                <span>{{successful}}</span>
+            </div>            
+
         </form>
     </div>
     <div class="footer">
