--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<app-header></app-header>
+
+<div class="app-container">
+home-page works! 
+</div>
+
+<app-footer></app-footer>
