--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,21 +13,26 @@ html, body {
     width: 100%;
     min-height: 100vh;
     height: 100%;
-    background: linear-gradient(220deg, #ffffff, #e7e7e7);
+    background: linear-gradient(220deg, #ffffff, #cbcbcb);
     overflow-x: hidden; /* evita estouro horizontal */
 }
 
 /* CSS DE PADRONIZAÇÃO DAS TELAS DE LOGIN E REGISTRO */
 .login-register-container {
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
-    height: 100%;
+    height: 100vh;
     background: linear-gradient(220deg, #45eae9, #a1a1a1);
 
     display: flex;
     flex-direction: column;
     align-items: center;      /* centraliza horizontalmente */
     justify-content: center;  /* centraliza verticalmente */
+}
+
+.app-container{
+    width: 100vw;
+    height: 80vh;
 }
 
 .signup-button{
