--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,36 @@
 <div class="footer-container">
+    <div class="footer-links">
+        <a routerLink="/home">
+            <img src="../../../assets/home_menu_icon.png"/>
+            <span>Inicio</span>
+        </a>
+    </div>
 
+    <div class="footer-links">
+        <a routerLink="/agua">
+            <img src="../../../assets/water_menu_icon.png"/>
+            <span>Água</span>
+        </a>
+    </div>
+
+    <div class="footer-links">
+        <a routerLink="/refeicoes">
+            <img src="../../../assets/food_menu_icon.png"/>
+            <span>Refeições</span>
+        </a>
+    </div>
+
+    <div class="footer-links">
+        <a routerLink="/meu-peso">
+            <img src="../../../assets/weigth_menu_icon.png"/>
+            <span>Peso</span>
+        </a>
+    </div>
+
+    <div class="footer-links">
+        <a routerLink="/perfil">
+            <img src="../../../assets/profile_menu_icon.png"/>
+            <span>Perfil</span>
+        </a>
+    </div>
 </div>
