--- a/src/app/components/agua-page/agua-page.component.html
+++ b/src/app/components/agua-page/agua-page.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="app-container">
-agua-page works! 
+    <div class="title">
+        Beba Água
+    </div>
 </div>
 
 <app-footer></app-footer>
