--- a/src/app/components/meu-peso-page/meu-peso-page.component.html
+++ b/src/app/components/meu-peso-page/meu-peso-page.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="app-container">
-meu-peso-page works! 
+    <div class="title">
+        Meu Peso
+    </div>
 </div>
 
 <app-footer></app-footer>
