--- a/src/app/components/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="app-container">
-profile-page works! 
+    <div class="title">
+        Meus Dados
+    </div>
 </div>
 
 <app-footer></app-footer>
