--- a/src/app/components/refeicoes-page/refeicoes-page.component.html
+++ b/src/app/components/refeicoes-page/refeicoes-page.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="app-container">
-refeicoes-page works! 
+    <div class="title">
+        Refeições
+    </div>
 </div>
 
 <app-footer></app-footer>
