--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <div class="app-container">
-home-page works! 
+    <div class="title">
+        Resumo diário
+    </div>
 </div>
 
 <app-footer></app-footer>
