--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="../../../assets/logo_small.png"/>
     </div>
     <div class="top-menu-content">
-        <span>Bem vindo, < usuario > </span>
+        <span>Bem vindo, {{usuario.nome}} </span>
         <button>
             <img src="../../../assets/user_icon.png"/>
         </button>
