--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,8 @@ html, body {
         align-items: center;
 
         font-size: 10vw;
+
+        box-shadow: rgba(128, 128, 128, 0.203) 5px 2px 5px;
     }
 }
 
