--- a/src/app/components/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page.component.html
@@ -19,8 +19,8 @@
         <button>Alterar Senha</button>
     </div>
     <div class="change-password-field">
-        <form>
-            <mat-form-field>
+        <form class="input-area">
+            <mat-form-field appearance="fill" class="form-field-small">
                 <mat-label>Senha atual:</mat-label>
                 <input 
                     type="text"
@@ -31,7 +31,7 @@
                 <mat-error>Campo obrigatório</mat-error>
             </mat-form-field>
 
-                        <mat-form-field>
+            <mat-form-field appearance="fill" class="form-field-small">
                 <mat-label>Nova senha:</mat-label>
                 <input 
                     type="text"
@@ -42,7 +42,7 @@
                 <mat-error>Campo obrigatório</mat-error>
             </mat-form-field>
 
-                        <mat-form-field>
+            <mat-form-field appearance="fill" class="form-field-small">
                 <mat-label>Confirmação:</mat-label>
                 <input 
                     type="text"
