--- a/src/app/components/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page.component.html
@@ -20,6 +20,8 @@
     </div>
     <div class="change-password-field">
         <form class="input-area">
+            <span>Alterar Senha</span>
+            <br/>
             <mat-form-field appearance="fill" class="form-field-small">
                 <mat-label>Senha atual:</mat-label>
                 <input 
@@ -52,6 +54,7 @@
                 />
                 <mat-error>Campo obrigatório</mat-error>
             </mat-form-field>
+            <button>Salvar</button>
         </form>
     </div>
 </div>
