--- a/src/app/components/profile-page/profile-page.component.scss
+++ b/src/app/components/profile-page/profile-page.component.scss
@@ -67,38 +67,45 @@
         bottom: 22vw;
 
         .input-area{
-                display: flex;
-                flex-direction: column;
                 width: 80vw;
                 height: auto;
                 padding: 5vw;
+                
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-content: center;
+                align-items: center;
+                
                 border: #122525 solid 1px;
                 border-radius: 5vw;
                 background-color: rgb(181, 181, 181);
 
                 span{
                     display: inline-block;
-                    width: 25vw;
-                    font-size: 1em;
+                    text-align: center;
+                    width: 90%;
+                    font-size: 5vw;
                     padding-top: 1.5vw;
                 }
     
                 .form-field-small{
                     
                     font-size: 12px;
-                    left: 5vw;
                     width: 60vw;
-                    height: 8vh;                
+                    height: 10vh;                  
 
     
                     .mat-mdc-form-field-infix {
-                        height: 12vh;
+                        height: 7vh;
+                    }
+
+                    .mat-mdc-text-field-wrapper {
+                        height: 7vh;
                     }
     
                     input {
-                        bottom: 1.0em;
                         font-size: 15px;
-                        padding-bottom: 5px;
                     }
                 }
             }
